--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "Other"
   ],
   "activationEvents": [],
-  "browser": "./dist/web/extension.js",
+  "main": "./dist/web/extension.js",
   "contributes": {
     "customEditors": [
       {
