--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"target": "ES2020",
 		"outDir": "dist",
 		"lib": [
-			"ES2020", "WebWorker", "DOM"
+			"ES2020", "DOM"
 		],
 		"jsx": "react",
 		"sourceMap": true,
